<resources>
    <string name="app_name">Presion_Arterial</string>
    <string name="bienvenido">Welcome</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="update">Update</string>
    <string name="user">User</string>
    <string name="doc">Doctor</string>
    <string name="pass">Password</string>
    <string name="acept">Accept</string>
    <string name="pSys">Write here you’re Systolic pressure </string>
    <string name="pDis">Write here you’re Distolic pressure </string>
    <string name="bloPresh">Blood Pressure </string>
    <string name="save">Save </string>
    <string name="cancel">Cancel</string>
    <string name="cap">Save test results</string>
    <string name="resG">Show graphic history</string>
    <string name="resT">Show table history</string>
    <string name="sigUpD">Sign Up for Doctors</string>
    <string name="mail">Em@il</string>
    <string name="phon">Cellphone number (044) </string>
    <string name="name">Full Name</string>
    <string name="age">Age (years)</string>
    <string name="menu">Menu</string>
    <string name="height">Height (m)</string>
    <string name="weight">Weight (kg)</string>
    <string name="office">Office address</string>
    <string name="home">Home address</string>


</resources>
