<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/new_login_gradients"
    tools:context="com.example.jebus_vladimir.presion_arterial.MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:layout_alignLeft="@+id/user"
        android:layout_alignStart="@+id/user"
        android:layout_alignTop="@+id/imageView2"
        android:layout_marginTop="12dp"
        android:text="@string/signup"
        android:textColor="#fff"
        android:textSize="24sp"
        />

    <Button
        android:id="@+id/resul"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:background="#df546e"
        android:text="@string/cancel"
        android:textColor="#fff"
        android:textSize="18sp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/edad"
        android:layout_alignStart="@+id/edad"
        android:onClick="cancelar" />


    <Button
        android:id="@+id/captu"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:background="#ffffff"
        android:text="@string/acept"
        android:textColor="#f16f7d"
        android:textSize="18sp"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/edad"
        android:layout_alignEnd="@+id/edad"
        android:onClick="aceptar"/>

    <EditText
        android:id="@+id/user"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginTop="80dp"
        android:background="@color/transparent"
        android:ems="10"
        android:hint="@string/user"
        android:inputType="textPersonName"
        android:textColorHint="#fff"
        android:textSize="18sp"
        android:textColor="#fff"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/edad"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:background="@color/transparent"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="textPersonName"
        android:textColorHint="#fff"
        android:textSize="18sp"
        android:textColor="#fff"
        android:layout_below="@+id/peso"
        android:layout_alignLeft="@+id/peso"
        android:layout_alignStart="@+id/peso"
        android:layout_marginTop="12dp" />

    <EditText
        android:id="@+id/peso"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_alignLeft="@+id/altura"
        android:layout_alignStart="@+id/altura"
        android:layout_below="@+id/altura"
        android:layout_marginTop="12dp"
        android:background="@color/transparent"
        android:ems="10"
        android:hint="@string/weight"
        android:inputType="textPersonName"
        android:textColorHint="#fff"
        android:textSize="18sp"
        android:textColor="#fff" />

    <EditText
        android:id="@+id/altura"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        android:background="@color/transparent"
        android:ems="10"
        android:hint="@string/height"
        android:inputType="textPersonName"
        android:textColorHint="#fff"
        android:textSize="18sp"
        android:textColor="#fff"
        android:layout_below="@+id/cel"
        android:layout_alignLeft="@+id/cel"
        android:layout_alignStart="@+id/cel" />

    <EditText
        android:id="@+id/cel"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_alignLeft="@+id/dir"
        android:layout_alignStart="@+id/dir"
        android:layout_below="@+id/dir"
        android:layout_marginTop="12dp"
        android:background="@color/transparent"
        android:ems="10"
        android:hint="@string/phon"
        android:inputType="textPersonName"
        android:textColorHint="#fff"
        android:textSize="18sp"
        android:textColor="#fff" />

    <EditText
        android:id="@+id/dir"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_alignLeft="@+id/name"
        android:layout_alignStart="@+id/name"
        android:layout_below="@+id/name"
        android:layout_marginTop="12dp"
        android:background="@color/transparent"
        android:ems="10"
        android:hint="@string/home"
        android:inputType="textPersonName"
        android:textColorHint="#fff"
        android:textSize="18sp"
        android:textColor="#fff" />

    <EditText
        android:id="@+id/name"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_alignLeft="@+id/pass"
        android:layout_alignStart="@+id/pass"
        android:layout_below="@+id/pass"
        android:layout_marginTop="12dp"
        android:background="@color/transparent"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textColorHint="#fff"
        android:textSize="18sp"
        android:textColor="#fff" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_alignLeft="@+id/user"
        android:layout_alignStart="@+id/user"
        android:layout_below="@+id/user"
        android:layout_marginTop="12dp"
        android:background="@color/transparent"
        android:ems="10"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:textColorHint="#fff"
        android:textSize="18sp"
        android:textColor="#fff" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_alignRight="@+id/textView3"
        android:layout_alignParentRight="true"
        android:layout_marginRight="36dp"
        android:layout_marginTop="12dp"
        app:srcCompat="@drawable/logo" />




</RelativeLayout>
