<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/new_login_gradients"
    tools:context="com.example.jebus_vladimir.presion_arterial.MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/logo"
        android:layout_marginTop="26dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/resul"
        android:layout_width="190dp"
        android:layout_height="50dp"

        android:layout_alignLeft="@+id/captu"
        android:layout_alignStart="@+id/captu"
        android:layout_below="@+id/captu"
        android:layout_marginTop="11dp"
        android:background="#df546e"
        android:text="@string/signup"
        android:textColor="#fff"
        android:textSize="18sp"
        android:onClick="startUsuario" />

    <Button
        android:id="@+id/captu"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/imageView"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="43dp"
        android:background="#ffffff"
        android:text="@string/login"
        android:textColor="#f16f7d"
        android:textSize="18sp"
        android:onClick="startLogin"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:background="@color/transparent"
        android:text="@string/doc"
        android:textColor="#fff"
        android:textSize="24sp"
        android:layout_alignTop="@+id/update"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_marginTop="39dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:background="@color/transparent"
        android:textColor="#fff"
        android:text="@string/user"
        android:textSize="24sp"
        android:layout_alignTop="@+id/captu"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="39dp" />

    <Button
        android:id="@+id/signupDoc"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/update"
        android:layout_alignStart="@+id/update"
        android:layout_below="@+id/update"
        android:layout_marginTop="11dp"
        android:background="#df546e"
        android:text="@string/signup"
        android:textColor="#fff"
        android:textSize="18sp"
        android:onClick="startMedico"/>

    <Button
        android:id="@+id/update"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/resul"
        android:layout_alignStart="@+id/resul"
        android:layout_below="@+id/resul"
        android:layout_marginTop="61dp"
        android:background="#ffffff"
        android:text="@string/update"
        android:textColor="#f16f7d"
        android:textSize="18sp"
        android:onClick="startMedico"/>


</RelativeLayout>
